# tsmc

./: .gitignore  README.md  spec.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  cli.py  cli_config.py  cli_paths.py  cli_service.py  dev.py  main.py
backend/app/api/: dependencies.py  router.py  routes_auth.py  routes_capture.py  routes_dashboard.py  routes_health.py  routes_ingest.py  routes_meta.py  routes_openai.py  routes_piles.py  routes_processing.py  routes_prompts.py  routes_sessions.py  routes_todo.py
backend/app/core/: config.py  version.py
backend/app/db/: migrations.py  session.py
backend/app/models/: __init__.py  api_token.py  enums.py  pile.py  prompt_template.py  session.py  source_capture.py  user.py
backend/app/prompts/: __init__.py  agentic_search.py  templates.py
backend/app/schemas/: auth.py  dashboard.py  explorer.py  graph.py  ingest.py  meta.py  openai_proxy.py  pile.py  processing.py  processing_worker.py  prompt_template.py  search.py  session.py  system.py  (+2 more)
backend/tests/: conftest.py  test_api_auth.py  test_auth_service.py  test_browser_proxy_llm_client.py  test_browser_proxy_parsers.py  test_browser_proxy_providers.py  test_capture_route.py  test_cli.py  test_cli_config.py  test_discard.py  test_explorer_routes.py  test_heuristics.py  test_ingest.py  test_markdown.py  test_openai_client.py  test_openai_proxy.py  test_openai_route.py  test_pile_routes.py  test_piles.py  test_processing_worker.py  test_prompt_routes.py  test_search.py  test_storage_route.py  test_todo_route.py  test_user_piles.py
(+133 files in other folders)
